// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Videos page: Render should render the video component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class=" text-gray-700 rounded bg-white sm:w-2/3 lg:w-1/2 hover:cursor-grab"
        role="presentation"
      >
        <div
          class="grid grid-cols-2 gap-2"
        >
          <div
            class="pl-5 pt-5 pb-3"
          >
            <img
              alt="video"
              src="video url"
            />
          </div>
          <div
            class="pt-5 pb-3"
          >
            <div>
              <strong>
                Name
                : 
              </strong>
              user name
            </div>
            <div>
              <strong>
                Position
                : 
              </strong>
              user position
            </div>
            <div>
              <strong>
                Date Uploaded
                : 
              </strong>
              8/1/2022, 9:00:00 AM
            </div>
            <div
              class="block mt-1 text-md leading-tight text-gray-900"
            >
              video description
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class=" text-gray-700 rounded bg-white sm:w-2/3 lg:w-1/2 hover:cursor-grab"
      role="presentation"
    >
      <div
        class="grid grid-cols-2 gap-2"
      >
        <div
          class="pl-5 pt-5 pb-3"
        >
          <img
            alt="video"
            src="video url"
          />
        </div>
        <div
          class="pt-5 pb-3"
        >
          <div>
            <strong>
              Name
              : 
            </strong>
            user name
          </div>
          <div>
            <strong>
              Position
              : 
            </strong>
            user position
          </div>
          <div>
            <strong>
              Date Uploaded
              : 
            </strong>
            8/1/2022, 9:00:00 AM
          </div>
          <div
            class="block mt-1 text-md leading-tight text-gray-900"
          >
            video description
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`navigate to videos page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="my-6"
      >
        <div
          class="grid gap-4 place-items-center"
        >
          <div
            class=" text-gray-700 rounded bg-white sm:w-2/3 lg:w-1/2 hover:cursor-grab"
            role="presentation"
          >
            <div
              class="grid grid-cols-2 gap-2"
            >
              <div
                class="pl-5 pt-5 pb-3"
              >
                <img
                  alt="video"
                  src="video-placeholder.jpg"
                />
              </div>
              <div
                class="pt-5 pb-3"
              >
                <div>
                  <strong>
                    Name
                    : 
                  </strong>
                  Jamie Cooke
                </div>
                <div>
                  <strong>
                    Position
                    : 
                  </strong>
                  Centre/Wing
                </div>
                <div>
                  <strong>
                    Date Uploaded
                    : 
                  </strong>
                  28/07/2022, 09:00:00
                </div>
                <div
                  class="block mt-1 text-md leading-tight text-gray-900"
                >
                  This is an introduction to the app, how to use it and what we are here to achieve!
                </div>
              </div>
            </div>
          </div>
          <div
            class=" text-gray-700 rounded bg-white sm:w-2/3 lg:w-1/2 hover:cursor-grab"
            role="presentation"
          >
            <div
              class="grid grid-cols-2 gap-2"
            >
              <div
                class="pl-5 pt-5 pb-3"
              >
                <img
                  alt="video"
                  src="video-placeholder.jpg"
                />
              </div>
              <div
                class="pt-5 pb-3"
              >
                <div>
                  <strong>
                    Name
                    : 
                  </strong>
                  Manny Chopstick
                </div>
                <div>
                  <strong>
                    Position
                    : 
                  </strong>
                  Centre/Back
                </div>
                <div>
                  <strong>
                    Date Uploaded
                    : 
                  </strong>
                  03/08/2022, 12:00:00
                </div>
                <div
                  class="block mt-1 text-md leading-tight text-gray-900"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                </div>
              </div>
            </div>
          </div>
          <div
            class=" text-gray-700 rounded bg-white sm:w-2/3 lg:w-1/2 hover:cursor-grab"
            role="presentation"
          >
            <div
              class="grid grid-cols-2 gap-2"
            >
              <div
                class="pl-5 pt-5 pb-3"
              >
                <img
                  alt="video"
                  src="video-placeholder.jpg"
                />
              </div>
              <div
                class="pt-5 pb-3"
              >
                <div>
                  <strong>
                    Name
                    : 
                  </strong>
                  Ramona Avalancho
                </div>
                <div>
                  <strong>
                    Position
                    : 
                  </strong>
                  Goalkeeper
                </div>
                <div>
                  <strong>
                    Date Uploaded
                    : 
                  </strong>
                  03/08/2022, 12:00:00
                </div>
                <div
                  class="block mt-1 text-md leading-tight text-gray-900"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                </div>
              </div>
            </div>
          </div>
          <div
            class=" text-gray-700 rounded bg-white sm:w-2/3 lg:w-1/2 hover:cursor-grab"
            role="presentation"
          >
            <div
              class="grid grid-cols-2 gap-2"
            >
              <div
                class="pl-5 pt-5 pb-3"
              >
                <img
                  alt="video"
                  src="video-placeholder.jpg"
                />
              </div>
              <div
                class="pt-5 pb-3"
              >
                <div>
                  <strong>
                    Name
                    : 
                  </strong>
                  Phil Foden
                </div>
                <div>
                  <strong>
                    Position
                    : 
                  </strong>
                  Striker
                </div>
                <div>
                  <strong>
                    Date Uploaded
                    : 
                  </strong>
                  03/08/2022, 12:00:00
                </div>
                <div
                  class="block mt-1 text-md leading-tight text-gray-900"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="my-6"
    >
      <div
        class="grid gap-4 place-items-center"
      >
        <div
          class=" text-gray-700 rounded bg-white sm:w-2/3 lg:w-1/2 hover:cursor-grab"
          role="presentation"
        >
          <div
            class="grid grid-cols-2 gap-2"
          >
            <div
              class="pl-5 pt-5 pb-3"
            >
              <img
                alt="video"
                src="video-placeholder.jpg"
              />
            </div>
            <div
              class="pt-5 pb-3"
            >
              <div>
                <strong>
                  Name
                  : 
                </strong>
                Jamie Cooke
              </div>
              <div>
                <strong>
                  Position
                  : 
                </strong>
                Centre/Wing
              </div>
              <div>
                <strong>
                  Date Uploaded
                  : 
                </strong>
                28/07/2022, 09:00:00
              </div>
              <div
                class="block mt-1 text-md leading-tight text-gray-900"
              >
                This is an introduction to the app, how to use it and what we are here to achieve!
              </div>
            </div>
          </div>
        </div>
        <div
          class=" text-gray-700 rounded bg-white sm:w-2/3 lg:w-1/2 hover:cursor-grab"
          role="presentation"
        >
          <div
            class="grid grid-cols-2 gap-2"
          >
            <div
              class="pl-5 pt-5 pb-3"
            >
              <img
                alt="video"
                src="video-placeholder.jpg"
              />
            </div>
            <div
              class="pt-5 pb-3"
            >
              <div>
                <strong>
                  Name
                  : 
                </strong>
                Manny Chopstick
              </div>
              <div>
                <strong>
                  Position
                  : 
                </strong>
                Centre/Back
              </div>
              <div>
                <strong>
                  Date Uploaded
                  : 
                </strong>
                03/08/2022, 12:00:00
              </div>
              <div
                class="block mt-1 text-md leading-tight text-gray-900"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </div>
            </div>
          </div>
        </div>
        <div
          class=" text-gray-700 rounded bg-white sm:w-2/3 lg:w-1/2 hover:cursor-grab"
          role="presentation"
        >
          <div
            class="grid grid-cols-2 gap-2"
          >
            <div
              class="pl-5 pt-5 pb-3"
            >
              <img
                alt="video"
                src="video-placeholder.jpg"
              />
            </div>
            <div
              class="pt-5 pb-3"
            >
              <div>
                <strong>
                  Name
                  : 
                </strong>
                Ramona Avalancho
              </div>
              <div>
                <strong>
                  Position
                  : 
                </strong>
                Goalkeeper
              </div>
              <div>
                <strong>
                  Date Uploaded
                  : 
                </strong>
                03/08/2022, 12:00:00
              </div>
              <div
                class="block mt-1 text-md leading-tight text-gray-900"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </div>
            </div>
          </div>
        </div>
        <div
          class=" text-gray-700 rounded bg-white sm:w-2/3 lg:w-1/2 hover:cursor-grab"
          role="presentation"
        >
          <div
            class="grid grid-cols-2 gap-2"
          >
            <div
              class="pl-5 pt-5 pb-3"
            >
              <img
                alt="video"
                src="video-placeholder.jpg"
              />
            </div>
            <div
              class="pt-5 pb-3"
            >
              <div>
                <strong>
                  Name
                  : 
                </strong>
                Phil Foden
              </div>
              <div>
                <strong>
                  Position
                  : 
                </strong>
                Striker
              </div>
              <div>
                <strong>
                  Date Uploaded
                  : 
                </strong>
                03/08/2022, 12:00:00
              </div>
              <div
                class="block mt-1 text-md leading-tight text-gray-900"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
